[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/core/shop/Shop.gd" type="Script" id=1]
[ext_resource path="res://source/core/boxes/RedBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/core/boxes/BlueBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/core/boxes/YellowBox.tscn" type="PackedScene" id=4]

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Boxes" type="Node2D" parent="."]

[node name="RedBox" parent="Boxes" instance=ExtResource( 2 )]
position = Vector2( 22, 131 )

[node name="BlueBox" parent="Boxes" instance=ExtResource( 3 )]
position = Vector2( 61, 131 )

[node name="YellowBox" parent="Boxes" instance=ExtResource( 4 )]
position = Vector2( 100, 131 )

